--- a/symphony/assets/basic.css
+++ b/symphony/assets/basic.css
@@ -8,6 +8,7 @@
  */
 
 html, body, div, span, applet, object, iframe,
+header, nav, section, aside, footer,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, font, img, ins, kbd, q, s, samp,
@@ -40,6 +41,9 @@ ol, ul {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+header, nav, section, aside, footer {
+	display: 
 }
 
 /*-----------------------------------------------------------------------------
