--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -853,9 +853,22 @@ body, html {
 	float: left;
 	padding: 20px 0 17px 18px;
 }
-#breadcrumbs a {
+#breadcrumbs a, #breadcrumbs span {
 	padding: 0;
 	font: 127.28% Lucida Grande, Leelawadee, Tahoma, Verdana, sans-serif;
+	color: rgba(0, 0, 0, 0.6);
+	text-shadow: 0 0 1px #fff;
+}
+#breadcrumbs a {
+	text-decoration: none;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+}
+#breadcrumbs a:hover {
+	border-bottom-color: rgba(0, 0, 0, 0.3);
+	color: rgba(0, 0, 0, 0.8);
+}
+#breadcrumbs span {
+	padding: 0 0.4em 0 0.25em;
 }
 /*#breadcrumbs a:link:after,*/
 /*#breadcrumbs a:hover:after {*/
@@ -865,7 +878,7 @@ body, html {
 /*	content: " > ";*/
 /*}*/
 #breadcrumbs span:last-of-type {
-	padding: 0 3px 0 0;
+/*	padding: 0 3px 0 0;*/
 }
 #context h2 {
 	border-bottom: 0;
