--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -241,6 +241,10 @@ span.frame {
 span.frame code {
 	color: #919183;
 }
+span.frame button,
+span.frame .button {
+	float: none;
+}
 
 /*--- Tags/suggestion list ---*/
 
@@ -457,7 +461,7 @@ button,
 	line-height: 1.3;
 	color: #63665b;
 	padding: 4px 14px;
-	text-decoration: none;		
+	text-decoration: none;
 	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), inset 0 1px 2px rgba(255, 255, 255, 0.5);
 	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 1px 2px rgba(255, 255, 255, 0.5);
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 1px 2px rgba(255, 255, 255, 0.5);
@@ -686,8 +690,8 @@ body, html {
 	background: -webkit-gradient(
 		linear,
 		left top,
-		left bottom, 
-		color-stop(0, #efefed), 
+		left bottom,
+		color-stop(0, #efefed),
 		color-stop(1, #d7d7d2)
 	);
 	background: -moz-linear-gradient(
