--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -938,6 +938,7 @@ body, html {
 }
 ul.page {
 	margin: 0;
+	margin-top: -58px;
 	padding: 20px 50px 0 19px;
 	height: 36px;
 	color: #887;
@@ -954,6 +955,9 @@ ul.page a {
 	margin: 0 -0.67em;
 	padding: 0.67em;
 	text-decoration: none;
+}
+ul.page form {
+	display: inline;
 }
 ul.page input {
 	color: #222 !important;
