slightly darker menu hover

--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -818,7 +818,7 @@ body, html {
 	padding-left: 11px;
 	margin-left: -1px;
 	margin-right: -1px;
-	background: #bababa;
+	background: #888;
 	color: #fff;
 	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
 	border-color: rgba(255, 255, 255, 0.8);
