Slightly darker menu bar

--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -691,13 +691,13 @@ body, html {
 		linear,
 		left top,
 		left bottom,
-		color-stop(0, #efefed),
-		color-stop(1, #d7d7d2)
+		color-stop(0, #DBDBD9),
+		color-stop(1, #C2C2BD)
 	);
 	background: -moz-linear-gradient(
 		top,
-		#efefed,
-		#d7d7d2
+		#DBDBD9,
+		#C2C2BD
 	);
 	border-bottom: 1px solid #bfbfb7;
 	-webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
@@ -734,7 +734,7 @@ body, html {
 	line-height: 30px;
 	padding: 0 10px;
 	position: relative;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
 	z-index: 3;
 	cursor: pointer;
 }
