--- a/symphony/assets/symphony.duplicator.css
+++ b/symphony/assets/symphony.duplicator.css
@@ -1,3 +1,8 @@
+#fields-duplicator {
+	margin: 0;
+	padding: 0;
+}
+
 /*-----------------------------------------------------------------------------
 	Duplicator plugin
 -----------------------------------------------------------------------------*/
@@ -14,12 +19,13 @@
 .invalid .duplicator {
 	border-color: #aa2211;
 }
-.duplicator > .instance {
+.duplicator .instance {
 	clear: left;
 	background: #ddddcc;
 	border-bottom: 1px solid #eeeedd;
+	overflow: hidden;
 }
-.duplicator > .instance > .header {
+.duplicator .instance .header {
 	background: #ccccbb;
 	border-bottom: 1px solid #eeeedd;
 	color: #666655;
@@ -27,11 +33,20 @@
 	padding: 0.5em 1.75em;
 	position: relative;
 }
-.duplicator > .instance > .header > span > i {
+.duplicator .instance .header span i {
+	opacity: 0;
 	margin: 0 0 0 0.5em;
 	font-weight: normal;
+	-webkit-transition: opacity 0.25s ease-out;
+	-moz-transition: opacity 0.25s ease-out;
+	-ms-transition: opacity 0.25s ease-out;
+	-o-transition: opacity 0.25s ease-out;
+	transition: opacity 0.25s ease-out;
 }
-.duplicator > .instance > .header .destructor {
+.duplicator .instance.collapsed .header span i {
+	opacity: 1;
+}
+.duplicator .instance .header .destructor {
 	font-weight: normal;
 	color: #333322;
 	margin: 0 1.75em;
@@ -42,19 +57,19 @@
 	top: 0;
 	text-shadow: 1px 1px #DDDDCC;
 }
-.duplicator > .instance > .header .destructor:hover {
+.duplicator .instance .header .destructor:hover {
 	color: #555544;
 }
-.duplicator > .instance > .header .destructor.disabled {
+.duplicator .instance .header .destructor.disabled {
 	color: #333322;
 	cursor: default;
 	opacity: 0.4;
 }
-.duplicator > .instance > .content {
+.duplicator .instance .content {
 	padding: 1em 1.75em 0 1.75em;
 	position: relative;
 }
-.duplicator > .controls {
+.duplicator .controls {
 	clear: left;
 	background: #aaaa99;
 	cursor: default;
@@ -63,40 +78,39 @@
 	text-align: right;
 /*	z-index: 3;*/
 }
-.duplicator > .controls:after {
+.duplicator .controls:after {
 	content: "";
 	display: block;
 	clear: left;
 	height: 0;
 }
-.duplicator > .controls.top {
+.duplicator .controls.top {
 	overflow: hidden;
 	border-bottom: 1px solid #eeeedd;
 }
-.duplicator > .controls.hidden {
+.duplicator .controls.hidden {
 	display: none;
 }
-.duplicator > .controls > * {
+.duplicator .controls a, .duplicator .controls select {
 	vertical-align: middle;
-	display: -moz-inline-stack; /* Firefox 2 */
 	display: inline-block;
 	margin: 0 0 0 0.75em;
 }
-.duplicator > .controls > select {
+.duplicator .controls select {
 	min-width: 15em;
 	width: auto;
 }
-.duplicator > .controls > .constructor {
+.duplicator .controls .constructor {
 	color: #f1f1f1;
 	cursor: pointer;
 	padding: 0.5em 0;
 	text-decoration: none;
 	text-shadow: 1px 1px #8E8E80;
 }
-.duplicator > .controls > .constructor:hover {
+.duplicator .controls .constructor:hover {
 	color: #ffffee;
 }
-.duplicator > .controls > .constructor.disabled {
+.duplicator .controls .constructor.disabled {
 	color: #eeeedd;
 	cursor: default;
 	opacity: 0.6;
@@ -106,16 +120,16 @@
 	Duplicator - Orderable
 -----------------------------------------------------------------------------*/
 
-.duplicator.orderable > .instance > .header {
+.duplicator.orderable .instance .header {
 	cursor: move;
 }
-.duplicator.orderable > .instance > .header span {
+.duplicator.orderable .instance .header span {
 	cursor: pointer;
 }
-.duplicator.ordering > .instance {
+.duplicator.ordering .instance {
 	opacity: 0.8;
 }
-.duplicator > .instance.ordering {
+.duplicator .instance.ordering {
 	border-top: 1px solid #eeeedd;
 	-moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
 	-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
@@ -123,22 +137,22 @@
 	opacity: 1;
 	z-index: 2;
 }
-.duplicator > .instance.ordering,
-.duplicator > .instance.ordering * {
+.duplicator .instance.ordering,
+.duplicator .instance.ordering * {
 	cursor: move;
 }
-.duplicator > .instance.collapsed {
+.duplicator .instance.collapsed {
 	border-bottom: none;
 }
-.duplicator > .instance.collapsed > .content {
-	display: none;
+.duplicator .instance.collapsed .content {
+/*	display: none;*/
 }
 
 /*-----------------------------------------------------------------------------
 	Duplicator - Collapsible
 -----------------------------------------------------------------------------*/
 
-.duplicator.collapsible > .controls > .collapser {
+.duplicator.collapsible .controls .collapser {
 	cursor: pointer;
 	float: left;
 	margin: 0;
@@ -147,10 +161,10 @@
 	text-decoration: none;
 	text-shadow: 1px 1px #8E8E80;
 }
-.duplicator.collapsible > .controls > .collapser:hover {
+.duplicator.collapsible .controls .collapser:hover {
 	color: #ffffee;
 }
-.duplicator.collapsible > .controls > .collapser.disabled {
+.duplicator.collapsible .controls .collapser.disabled {
 	color: #eeeedd;
 	cursor: default;
 	opacity: 0.6;
