--- a/symphony/assets/symphony.duplicator.css
+++ b/symphony/assets/symphony.duplicator.css
@@ -1,8 +1,3 @@
-.duplicator ol {
-	margin: 0;
-	padding: 0;
-}
-
 /*-----------------------------------------------------------------------------
 	Duplicator plugin
 -----------------------------------------------------------------------------*/
@@ -10,7 +5,12 @@
 .duplicator {
 	margin: 0;
 	list-style: none;
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1)
+	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+.duplicator ol {
+	margin: 0;
+	padding: 0;
 }
 .duplicator i {
 	color: rgba(0, 0, 0, 0.4);
@@ -21,34 +21,35 @@
 }
 .duplicator .instance {
 	clear: left;
-	border-bottom: 1px solid #f3f3f3;
-	border-left: 1px solid #bfbfb7;
-	border-right: 1px solid #bfbfb7;
-	background: #e4e4e0;
-	z-index: 10;
-}
-.duplicator .instance .header {
-	border-top: 1px solid #cfcfcf;
-	border-bottom: 1px solid rgba(255, 255, 255, 0.4);
-	color: rgba(0, 0, 0, 0.65);
-	margin: 0;
-	padding: 0.5em 1em;
-	position: relative;
+	border-left: 1px solid #D0D0CD;
+	border-right: 1px solid #D0D0CD;
+	background: #ECECEB;
 	background: -webkit-gradient(
 		linear,
 		left top,
 		left bottom,
-		color-stop(0, #e0e0dc),
-		color-stop(1, #e4e4e0)
+		color-stop(0, #ECECEB),
+		color-stop(1, #F3F3EF)
 	);
 	background: -moz-linear-gradient(
 		top,
-		#e0e0dc,
-		#e4e4e0
+		#ECECEB,
+		#F3F3EF
 	);
+	z-index: 10;
+	-moz-box-shadow: inset 0 -1px 2px #f3f3f3;
+	-webkit-box-shadow: inset 0 -1px 2px #f3f3f3;
 }
-.duplicator .instance:hover, .duplicator .instance:hover .header {
-	background: #e0e0dc;
+.duplicator .instance .header {
+	border-top: 1px solid #cfcfcf;
+	color: rgba(0, 0, 0, 0.65);
+	margin: 0;
+	padding: 0.5em 1em;
+	position: relative;
+	background: #E5E5E4;
+	-moz-box-shadow: inset 0 -1px 1px #f3f3f3;
+	-webkit-box-shadow: inset 0 -1px 1px #f3f3f3;
+	text-shadow: 1px 1px 1px #f9f9f9;
 }
 .duplicator .instance .header span i {
 	opacity: 0;
@@ -60,32 +61,28 @@
 	-o-transition: opacity 0.25s ease-out;
 	transition: opacity 0.25s ease-out;
 }
-.duplicator .instance.collapsed .header span i {
-	opacity: 1;
-}
 .duplicator .instance .header .destructor {
+	text-indent: -9999px;
 	position: absolute;
 	top: 5px;
 	right: 7px;
-	text-decoration: none;
-	color: rgba(0, 0, 0, 0.3);
-	height: 14px;
-	width: 14px;
-	overflow: hidden;
-	text-indent: -1000em;
-	line-height: 0.5;
+	padding: 3px 0 0 3px;
+
 	background: rgba(255, 255, 255, 0.2);
+	color: rgba(0, 0, 0, 0.3);
+	height: 11px;
+	width: 12px;
+	line-height: 0.5;
+	border: 1px solid rgba(255, 255, 255, 0.8);
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
-	padding: 0 !important;
-	border: 1px solid rgba(255, 255, 255, 0.8);
-	font-size: 0.95em;
+	text-decoration: none;
 }
 .duplicator .instance .header .destructor:after {
 	content: "\00d7";
 	position: absolute;
-	top: 3px;
+	top: 4px;
 	right: 3px;
 	text-indent: 0;
 }
@@ -100,6 +97,7 @@
 	opacity: 0.4;
 }
 .duplicator .instance .content {
+	border-top: 1px solid #DCDCD7;
 	padding: 1em 1em 0 1em;
 	position: relative;
 }
@@ -133,6 +131,9 @@
 }
 .duplicator .controls.hidden {
 	display: none;
+}
+.duplicator .controls a {
+	border-bottom: none;
 }
 .duplicator .controls * {
 	vertical-align: middle;
@@ -169,30 +170,27 @@
 	cursor: pointer;
 }
 .duplicator.ordering .instance {
-	z-index: 10;
+	opacity: 0.5;
 }
 .duplicator .instance.ordering {
-	border-top: 1px solid #bfbfb7;
-	-moz-box-shadow: 0 -1px 8px rgba(0, 0, 0, 0.2);
-	-webkit-box-shadow: 0 -1px 8px rgba(0, 0, 0, 0.2);
-	margin-top: -1px;
+	opacity: 1;
+	border-bottom: 1px solid #D0D0CD;
+	-moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
+	margin-bottom: -1px;
 	z-index: 1000;
-	background: #dadad6;
-}
-.duplicator .instance.ordering .header {
-	background: #dadad6;
 }
 .duplicator .instance.ordering,
 .duplicator .instance.ordering * {
 	cursor: move;
 }
-.duplicator .instance.collapsed {
-	border-bottom: none;
-}
 .duplicator .instance.collapsed .content {
 	display: none;
 }
-
+.duplicator .instance.collapsed .header span i {
+	opacity: 1;
+}
 /*-----------------------------------------------------------------------------
 	Duplicator - Collapsible
 -----------------------------------------------------------------------------*/
