Remove the configurable DOCROOT from the installer. Looking at the code now that I've removed it, I'm fairly sure it would of caused issues anyway!

--- a/install/assets/main.css
+++ b/install/assets/main.css
@@ -38,10 +38,14 @@ code {
 }
 
 /* Forms */
-fieldset {
+fieldset,
+div.warning {
 	margin-top: 82px;
 	padding-bottom: 1.5em;
 	border: none;
+}
+div.warning + fieldset {
+	margin-top: 1.75em;
 }
 legend {
 	padding-bottom: 1.25em;
