--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -714,6 +714,8 @@ input[type=submit]:active,
 	padding: 0 10px;
 	position: relative;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
+	border-left: 1px solid transparent;
+	border-right: 1px solid transparent;
 	z-index: 3;
 	cursor: pointer;
 }
@@ -729,27 +731,22 @@ input[type=submit]:active,
 	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
 	z-index: 2;
 }
-#nav > ul > li:hover {
-	color: #fff;
-	background-color: #a29f9c;
-	background-image: -webkit-linear-gradient(top, #acacac 0%, #bbb 35%, #a29f9c 65%, #a29f9c 100%);
-	background-image:    -moz-linear-gradient(top, #acacac 0%, #bbb 35%, #a29f9c 65%, #a29f9c 100%);
-	background-image:     -ms-linear-gradient(top, #acacac 0%, #bbb 35%, #a29f9c 65%, #a29f9c 100%);
-	background-image:      -o-linear-gradient(top, #acacac 0%, #bbb 35%, #a29f9c 65%, #a29f9c 100%);
-	background-image:   linear-gradient(to bottom, #acacac 0%, #bbb 35%, #a29f9c 65%, #a29f9c 100%);
-	height: 31px;
-	text-shadow: 1px 1px 0 #898682;
-	z-index: 5;
+#nav > ul > li:hover, #nav > ul > li.active:hover {
+	color: #555;
+	background: #fff;
+	border-color: rgba(187, 187, 187, 0.6);
+	height: 31px;	
+	text-shadow: none;
 }
 
 /* Dropdown */
 
 #nav li ul {
-	background: rgba(255, 255, 255, 0.9);
+	background: #fff;
 	margin: 0;
 	padding: 0;
 	display: none;
-	box-shadow: 0 0 6px rgba(0, 0, 0, 0.07), 0 0 15px rgba(0, 0, 0, 0.05);
+	box-shadow: 0 4px 5px rgba(0, 0, 0, 0.03), 0 7px 15px -5px rgba(0, 0, 0, 0.15);
 	list-style: none;
 	min-width: 120px;
 	position: absolute;
@@ -778,7 +775,7 @@ input[type=submit]:active,
 }
 #nav ul a:hover {
 	color: #fff;
-	background: #999693;
+	background: #888888;
 	border: 1px solid #fff;
 	text-shadow: 1px 1px 0 #807d79;
 }
