--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -714,8 +714,6 @@ input[type=submit]:active,
 	padding: 0 10px;
 	position: relative;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
-	border-left: 1px solid transparent;
-	border-right: 1px solid transparent;
 	z-index: 3;
 	cursor: pointer;
 }
@@ -731,22 +729,27 @@ input[type=submit]:active,
 	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
 	z-index: 2;
 }
-#nav > ul > li:hover, #nav > ul > li.active:hover {
-	color: #555;
-	background: #fff;
-	border-color: rgba(187, 187, 187, 0.6);
-	height: 31px;	
-	text-shadow: none;
+#nav > ul > li:hover {
+	color: #fff;
+	background-color: #a29f9c;
+	background-image: -webkit-linear-gradient(top, #acacac 0%, #bbb 35%, #a29f9c 65%, #a29f9c 100%);
+	background-image:    -moz-linear-gradient(top, #acacac 0%, #bbb 35%, #a29f9c 65%, #a29f9c 100%);
+	background-image:     -ms-linear-gradient(top, #acacac 0%, #bbb 35%, #a29f9c 65%, #a29f9c 100%);
+	background-image:      -o-linear-gradient(top, #acacac 0%, #bbb 35%, #a29f9c 65%, #a29f9c 100%);
+	background-image:   linear-gradient(to bottom, #acacac 0%, #bbb 35%, #a29f9c 65%, #a29f9c 100%);
+	height: 31px;
+	text-shadow: 1px 1px 0 #898682;
+	z-index: 5;
 }
 
 /* Dropdown */
 
 #nav li ul {
-	background: #fff;
+	background: rgba(255, 255, 255, 0.9);
 	margin: 0;
 	padding: 0;
 	display: none;
-	box-shadow: 0 4px 5px rgba(0, 0, 0, 0.03), 0 7px 15px -5px rgba(0, 0, 0, 0.15);
+	box-shadow: 0 0 6px rgba(0, 0, 0, 0.07), 0 0 15px rgba(0, 0, 0, 0.05);
 	list-style: none;
 	min-width: 120px;
 	position: absolute;
@@ -775,7 +778,7 @@ input[type=submit]:active,
 }
 #nav ul a:hover {
 	color: #fff;
-	background: #888888;
+	background: #999693;
 	border: 1px solid #fff;
 	text-shadow: 1px 1px 0 #807d79;
 }
@@ -1082,6 +1085,21 @@ ul.page input.error, ul.page input.error:focus {
 }
 #blueprints-components .triple {
 	padding-top: 5px;
+}
+#blueprints-datasources a.expand, #blueprints-events a.expand {
+    text-decoration: none;
+}
+#blueprints-datasources a.expand span.less, #blueprints-events a.expand span.less {
+    display: none;
+}
+#blueprints-datasources a.expand span.more, #blueprints-events a.expand span.more {
+    display: inline;
+}
+#blueprints-datasources a.expanded span.less, #blueprints-events a.expanded span.less {
+    display: inline;
+}
+#blueprints-datasources a.expanded span.more, #blueprints-events a.expanded span.more {
+    display: none;
 }
 #components {
 	padding-bottom: 5px;
