--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -1086,6 +1086,21 @@ ul.page input.error, ul.page input.error:focus {
 #blueprints-components .triple {
 	padding-top: 5px;
 }
+#blueprints-datasources a.expand, #blueprints-events a.expand {
+    text-decoration: none;
+}
+#blueprints-datasources a.expand span.less, #blueprints-events a.expand span.less {
+    display: none;
+}
+#blueprints-datasources a.expand span.more, #blueprints-events a.expand span.more {
+    display: inline;
+}
+#blueprints-datasources a.expanded span.less, #blueprints-events a.expanded span.less {
+    display: inline;
+}
+#blueprints-datasources a.expanded span.more, #blueprints-events a.expanded span.more {
+    display: none;
+}
 #components {
 	padding-bottom: 5px;
 	background-color: #fff;
